# NexusEncryption

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPLIANCE.md  DEPLOYMENT.md  Dockerfile  LICENSE.md  PRE_LAUNCH_CHECKLIST.md  PRIVACY_POLICY.md  PRODUCTION_READINESS_REPORT.md  PROJECT-STATUS.md  README.md  RELEASE.md  SECURITY.md  TERMS_OF_SERVICE.md  TEST-PLAN.md  TESTING.md  next.config.mjs  nginx.conf  package-lock.json  package.json  test-setup.ts  tsconfig.json  vitest.config.mjs
NexuralTradingFrontEnd/: package.json  tailwind.config.js
__tests__/: crypto-utils.test.ts  nexus-cipher.test.tsx
app/: globals.css  layout.tsx  page.tsx
components/: advanced-vault-tabs.tsx  global-error-listener.tsx  nexus-cipher.tsx  tauri-link-handler.tsx  tauri-updater.tsx  theme-provider.tsx
cyberpunk-terminal-site/: middleware.ts  package-lock.json  package.json
docs/: README.md  architecture.md  docusaurus.config.ts  overview.md  package.json  release.md  security.md  setup.md  sidebars.ts  testing.md  troubleshooting.md
hooks/: use-clipboard.ts  use-encryption.ts  use-keyboard-navigation.ts  use-theme.ts  use-toast.ts  use-virtual-scroll.ts
lib/: advanced-crypto-options.ts  advanced-vault-features.ts  ai-security-analyzer.ts  cache-manager.ts  compliance-checker.ts  crypto-utils.ts  crypto-worker.ts  enterprise-manager.ts  error-handler.ts  i18n-manager.ts  input-validator.ts  logger.ts  ml-threat-detection.ts  performance-monitor.ts  pwa-manager.ts  quantum-resistance.ts  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+309 files in other folders)
