[package]
name = "nexus-cipher-app"
version = "0.1.0"
description = "Nexus Cipher"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "updater", "fs-create-dir", "fs-write-file", "fs-remove-file", "fs-read-file", "shell-open"] }
keyring = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
